--- a/css/style.css
+++ b/css/style.css
@@ -5,62 +5,85 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  min-height: 95vh;
-  font-family: "Garamond", serif;
-  color: #1D2C33;
-
-  background-color: #DCDDD7; 
-  background-image: url("../images/websitebackground.jpg");
-  background-repeat: no-repeat;
-  background-position: bottom center;
-  background-size: contain; 
+  height: 100%;
 }
 
-nav a:hover {
-  color: #1D2C33; 
+body {
+  font-family: "Garamond", serif;
+  color: #1d2c33;
+  background-color: #dcddd7;
+
+  display: flex;
+  flex-direction: column;
 }
 
 h1 {
   text-align: center;
-  margin-top: 100px;
-  margin-bottom: 20px;
-  font-size: 4rem;
+  margin-top: 200;
+  margin-bottom: 16px;
+  font-size: 3.5rem;
 }
 
 h2 {
   text-align: center;
+  font-size: 1.3rem;
 }
-
-h3 {
-  text-align: center;
-}
-
-p {
-  max-width: 700px;
-  margin: 10px auto;
-  font-size: 1.2rem;
-  padding: 0 20px;
-}
-
 
 .social-buttons {
   display: flex;
   justify-content: center;
   gap: 25px;
   margin-top: 30px;
+  margin-bottom: 20px;
 }
 
 .social-buttons a {
   text-decoration: none;
-  font-size:3rem;          
-  color: #5D8292;           
+  font-size: 3rem;
+  color: #5d8292;
   padding: 18px;
   border-radius: 50%;
   transition: 0.3s ease;
 }
 
 .social-buttons a:hover {
-  color: #1D2C33;           
+  color: #1d2c33;
 }
 
+.image {
+  margin-top: auto; 
+  width: 100%;
+}
+
+.image img {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+}
+
+
+@media (max-width: 800) {
+  h1 {
+    margin-top: 200px;
+    font-size: 2.4rem;
+    margin-bottom: 10px;
+  }
+
+  h2 {
+    font-size: 1.1rem;
+  }
+
+  .social-buttons {
+    gap: 18px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+  .social-buttons a {
+    font-size: 2.4rem;
+    padding: 12px;
+  }
+}
