--- a/css/style.css
+++ b/css/style.css
@@ -21,7 +21,7 @@ body {
 
 h1 {
   text-align: center;
-  margin-top: 200;
+  margin-top: 200px;
   margin-bottom: 16px;
   font-size: 3.5rem;
 }
@@ -60,12 +60,12 @@ h2 {
 .image img {
   display: block;
   width: 100%;
-  height: auto;
   max-width: 100%;
+  height: auto;
 }
 
 
-@media (max-width: 800) {
+@media (max-width: 700px) {
   h1 {
     margin-top: 200px;
     font-size: 2.4rem;
