--- a/css/style.css
+++ b/css/style.css
@@ -22,21 +22,26 @@ body {
 h1 {
   text-align: center;
   margin-top: 200px;
-  margin-bottom: 16px;
   font-size: 3.5rem;
+  font-style: italic;
+  font-weight: bold;
+  letter-spacing: .1px;
 }
 
 h2 {
   text-align: center;
   font-size: 1.3rem;
+  margin-top: 33px;
+  margin-bottom: 30px;
+  font-weight: 100;
+  letter-spacing: .5px;
+
 }
 
 .social-buttons {
   display: flex;
   justify-content: center;
   gap: 25px;
-  margin-top: 30px;
-  margin-bottom: 20px;
 }
 
 .social-buttons a {
